# chat-pygpt

./: .gitignore  README.md  app.py  pyproject.toml
db/b4916e90-c9b8-471b-9a4f-68ffebdd3662/: index_metadata.pickle
