[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "langchain-groq>=0.2.1",
    "streamlit>=1.40.2",
    "pypdf>=5.1.0",
    "langchain-ollama>=0.2.1",
    "decouple>=0.0.7",
    "fastembed>=0.4.2",
]
