[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.10",
    "langchain-groq>=0.2.1",
    "streamlit>=1.44.1",
    "pypdf>=5.1.0",
    "langchain-ollama>=0.2.1",
    "decouple>=0.0.7",
    "fastembed>=0.4.2",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
]
